# twin-demo

./: .gitignore  README.md
app/: .gitignore  pyproject.toml
app/app/: __init__.py  inference.py  streamlit_app.py
app/colab/: train_v2_colab.ipynb
app/scripts/: artifacts.sh  draw_boxes.py  get_dataset.py  train_baseline.py  train_smoke.py  train_v2.py
docs/metrics/: v1_per_class.csv
